My_Portfolio_Website/css/main.css
/**------Global Variables and broad styles-----
-------------------------------------**/

:root {
    --white: rgb(238, 237, 237);
    --green-dark: #076824;
    --yellow: #f1c500;
    --yellow-dark: #b49300;
    --red: #d44840;
    --red-dark: #aa3835;
    --grey: #f0f2f2;
    --grey-dark: #7b8383;
    --grey-Xdark: #272b2b;
    --black: #181818;
}

html {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
  }
  *, *:before, *:after {
    -webkit-box-sizing: inherit;
    -moz-box-sizing: inherit;
    box-sizing: inherit;
}
  
body, body * {
    margin: 0;
    padding: 0;
}

.low-line-height {
    line-height: 0.5;
}

body {
    background-color: var(--grey-Xdark);
}

.container {
    max-width: 100%;
}

img {
    max-width: 100%;
}

.center {
    text-align: center;
}

/**---------Typography----------------
-------------------------------------**/

body {
    font-family: 'Ubuntu', serif;
    text-align: center;
    line-height: 1.6;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Roboto Slab', serif;
    font-weight: 700;
    line-height: 1;
}

h1 {
    font-size: 2.25em;
}

form {
    font-family: 'Ubuntu', serif;
    font-weight: 700;
}

form input[type="submit"]{
    font-family: 'Roboto Slab', serif;
    font-weight: 700;
}


ul {
    list-style: none;
}

.github-text p, a {
    font-weight: 500;
}

/**---------Navigation----------------
-------------------------------------**/
nav {
    position: fixed;
    top:0;
    left:0;
    width: 100%;
}

ul {
    display: flex;
    justify-content: center;

    background-color: var(--black);
}

.list-items a{
    display: block;
    padding: .5em;
    font-size: 1.1rem;
    line-height: 1;
    text-decoration: none;
    color: var(--white);
    margin-inline: auto;
}

.nav-other:hover a{
    background-color: var(--grey);
    color: var(--grey-Xdark);
    border-radius: 3px;
    }

.nav-home {
    background-color: var(--grey-Xdark);
    border-radius: 3px;
}

.nav-home:hover a{
    color: var(--yellow);
    background-color: var(--grey-dark);
    border-radius: 3px;
}


/**---------Hero----------------------
-------------------------------------**/
.Hero {
    display: block;
    padding-top: 3rem;
    background-image: linear-gradient(rgba(0, 0, 0, 0.30), rgba(0, 0, 0, 0.30)), url("../images/keyboard-1.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    width: 100%;
    color: var(--white);
    font-size: 1.1rem;
}

h1 {
    padding: 1em 0.25em;
}

.Van-Gogh {
    margin-bottom: 1em;
    font-style: italic;
    padding-top: .5em;
}

.welcome {
    padding: 2em 1em;
}

q {
    line-height: 0;
}

q::before {
    content: open-quote;
    font-size: 1.4rem;
}

q::after {
    content: close-quote;
    font-size: 1.4rem;
}

/**---------About---------------------
-------------------------------------**/

#about {
    color: var(--white);     
}

.link {
    color: var(--yellow);
}

.computer {
    padding: 3em 1em 0 1em;
}

.computer img {
    border-radius: 8px;
    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.50);
}

#box-2 {
    padding: 0 1em 3em 1em;
}

.about-text {
    padding-bottom: 2em;
}
/*-----------Programing Logos--------*/

.programming-logos {
    margin-top: 1em;
    margin-bottom: 2em;
}

.p-logo {
    width: 50px;
    height: 55px;
    margin-inline: .25em;
}

#js-logo {
    width: 55px;
}

/*-----------Framework Logos---------*/

.framework-logos {
    margin-top: 1em;
    margin-bottom: 2em;
}

.f-logo {
    height:55px;
    margin-inline: .25em;
}

/*------Visual Software Logos--------*/

.visualSoft-logos {
    margin-top: 1em;
    margin-bottom: 2em;
}

.vs-logo {
    height:55px;
    margin-inline: .25em;
}

/**---------Github--------------------
-------------------------------------**/
#github {
    background-color: var(--white);
    border-radius: 5px;
    padding: 1em 0 5em 0;
}

.github-img {
    margin-bottom:3em;
}

.github-text p {
    padding-bottom: 1em;
}

#github-logo{
    height:75px;
}
/**---------Form----------------------
-------------------------------------**/
#contact {
    margin-top: 4em;
    border: 2px solid var(--white);
    border-radius: 5px;
}
form {
    max-width: 500px;
    padding: 0 2rem .2rem 2rem;
    margin: 0 auto;
    text-align: left;
}

.message-img {
    padding: 1em 1em 0 1em;
}

.message-img img{
    border-radius: 8px;
    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.50);
}

form input[type="text"], input[type="email"], textarea {
    display: block;
    width: 100%;
    border-radius: 8px;
    border-color: var(--white);
    box-shadow: inset 0px 3px 1px 0px rgba(5,5,5, 0.15);
}

form input[type="text"]:focus, input[type="email"]:focus, textarea:focus {
    outline: 2px solid var(--yellow);
}

form input[type="text"], input[type="email"], textarea  {
    padding: .3125em 0 .3125em .3125em ;
}

textarea{
    /* padding: 1em 0; */
    min-height: 5rem;
}

form label {
    color: var(--white);
    display: block;
    font-size: 0.8em;
    padding-top: 1em;
}

input[type="submit"] {
    width: 6rem;
    padding: .2em 1em;
    margin: 1rem 0;
    border-radius: 5px;
    border-color: var(--yellow) ;
    background-color: var(--yellow);
    color: var(--grey-Xdark);
    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.50);
    transition-property: background-color, border-color, color;
    transition: 300ms ease-in-out;
} 

input[type="submit"]:hover {
    background-color: var(--yellow-dark);
    border-color: var(--yellow-dark) ;
    color: var(--white);
}

/**---------Footer--------------------
-------------------------------------**/
footer {
    Margin-top: 5em;
    padding: 2em 0;
    width:100%;
    background-color: var(--white);
    font-weight: 500;
}

/**---------@Media--------------------
-------------------------------------**/

/** If Screen is bigger than 500px **/
@media only screen and (min-width:500px) {
    .list-items a {
        font-size: 1.3125rem;
    }
    h1 {
        font-size: 3em;
    }
    #about, #github, #contact{
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
    }
    #box-1, #box-2, #box-3, #box-4, #box-5, #box-6 {
        min-width: 500px;
        max-width: 50%;
        /* max-width: max(50%, 700px); */
        padding-bottom: 0;
    }
    .computer {
        padding: 1em;
    }
}

/** If screen size is smaller then 1015px **/
@media only screen and (max-width:1015px) {
    #box-1, #box-2 {
    max-width: 100%;
    }
}
/** At bigger Screen size I want this header to exist 
and at smaller I want the Github Logo to act as a header **/
@media only screen and (max-width:700px) {
    .github-text h2 {
        display: none;
    }
}

